z-index fixes

--- a/src/document-editor.less
+++ b/src/document-editor.less
@@ -170,7 +170,7 @@
 }
 
 .fr-popup.fr-desktop.fr-active {
-    z-index: 999;
+    z-index: 999 !important;
 }
 
 // Custom Styles
